--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
